hero image spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -154,7 +154,7 @@ img {
 
 /* Linked Images Style */
 .hero_img { 
-    margin: 3rem auto;
+    margin: 3rem auto 4rem auto;
 }
 
 .linked_img { 
